Fixed scrollbar styles for Gecko (firefox) -based browsers

--- a/styles/Main.css
+++ b/styles/Main.css
@@ -132,6 +132,17 @@ body {
   border: solid 2px transparent;
 }
 
+/* Gecko (firefox) based browsers */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--primary) rgb(242, 244, 248);
+}
+
+body:has(.switch__input:checked) *,
+*:has(.switch__input:checked) {
+  scrollbar-color: var(--primary) rgb(13, 11, 7);
+}
+
 /*Style for mobile view*/
 @media (max-width: 661px) {
   ::-webkit-scrollbar {
